[package]
name = "rasengan"
version = "0.2.3"
edition = "2021"
authors = ["Tauseef Khan", "Tauseef Khan <tauseef25@gmail.com>"]
description = "Circular buffer with overwrite on overflow."
repository = "https://github.com/tauseefk/rasengan"
license = "MIT"
keywords = ["gamedev", "circular-buffer"]

include = [
  "**/*.rs",
  "Cargo.toml",
]

[dependencies]

[profile.release]
opt-level = 3
codegen-units = 1
debug = 2
